k8s/mortgage.ui.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mortgage-ui
spec:
  type: LoadBalancer
  selector:
    app: mortgage-ui
  ports:
  - port: 8080
    targetPort: 80
