k8s/mortgage.variablerates.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mortgage-variablerates
spec:
  rules:
  - host: mvr.localhost
    http:
      paths:
      - backend:
          serviceName: mortgage-variablerates
          servicePort: 80
  tls:
    - hosts:
      - mvr.localhost
      secretName: mortgagevariablerates-tls
